--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,102 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="OTN-QF-Abe">
+                                <rect key="frame" x="0.0" y="61" width="600" height="539"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n4H-cg-cDc">
+                                <rect key="frame" x="1" y="0.0" width="599" height="53"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="4qi-wJ-aNo">
+                                        <rect key="frame" x="0.0" y="5" width="599" height="44"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.55539534395973156" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="4qi-wJ-aNo" secondAttribute="trailing" id="CcU-r5-PnH"/>
+                                    <constraint firstItem="4qi-wJ-aNo" firstAttribute="leading" secondItem="n4H-cg-cDc" secondAttribute="leading" id="LW6-XC-q5K"/>
+                                    <constraint firstAttribute="height" constant="53" id="UuY-Ze-I56"/>
+                                    <constraint firstItem="4qi-wJ-aNo" firstAttribute="top" secondItem="n4H-cg-cDc" secondAttribute="top" constant="5" id="c6i-jV-I9r"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nEx-6x-PCM">
+                                <rect key="frame" x="20" y="67" width="560" height="513"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XCK-55-6yu">
+                                    <size key="itemSize" width="115" height="115"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="PKG-no-fLs">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="297" translatesAutoresizingMaskIntoConstraints="NO" id="JaM-jR-kTu">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="96"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lU-ei-5Ld">
+                                                    <rect key="frame" x="0.0" y="94" width="115" height="21"/>
+                                                    <color key="backgroundColor" red="0.40000000000000002" green="0.79215686269999996" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="I6h-YC-MK4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="0.30379849137931036" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="JaM-jR-kTu" firstAttribute="top" secondItem="PKG-no-fLs" secondAttribute="top" id="0GT-dD-mjP"/>
+                                            <constraint firstAttribute="bottom" secondItem="3lU-ei-5Ld" secondAttribute="bottom" id="287-wL-dCD"/>
+                                            <constraint firstItem="3lU-ei-5Ld" firstAttribute="leading" secondItem="PKG-no-fLs" secondAttribute="leading" id="6ut-n3-qYU"/>
+                                            <constraint firstItem="JaM-jR-kTu" firstAttribute="leading" secondItem="PKG-no-fLs" secondAttribute="leading" id="HOJ-aT-1na"/>
+                                            <constraint firstAttribute="trailing" secondItem="JaM-jR-kTu" secondAttribute="trailing" id="hX1-4r-Kpm"/>
+                                            <constraint firstAttribute="bottom" secondItem="JaM-jR-kTu" secondAttribute="bottom" id="jbX-4Y-KZl"/>
+                                            <constraint firstAttribute="trailing" secondItem="3lU-ei-5Ld" secondAttribute="trailing" id="xoo-hl-giW"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nEx-6x-PCM" secondAttribute="bottom" constant="20" id="7Zn-j7-Jdf"/>
+                            <constraint firstItem="nEx-6x-PCM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="8BR-Vk-OUN"/>
+                            <constraint firstAttribute="trailing" secondItem="OTN-QF-Abe" secondAttribute="trailing" id="JNT-u3-5vj"/>
+                            <constraint firstItem="n4H-cg-cDc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-19" id="NKc-vr-ckp"/>
+                            <constraint firstItem="nEx-6x-PCM" firstAttribute="top" secondItem="n4H-cg-cDc" secondAttribute="bottom" constant="14" id="Vpz-iv-RAk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="n4H-cg-cDc" secondAttribute="trailing" constant="-20" id="WPp-3A-Eli"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OTN-QF-Abe" secondAttribute="bottom" id="Wxy-Ip-3OI"/>
+                            <constraint firstItem="OTN-QF-Abe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="31" id="fKC-1B-p1j"/>
+                            <constraint firstItem="OTN-QF-Abe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gSn-B5-TEP"/>
+                            <constraint firstAttribute="trailing" secondItem="nEx-6x-PCM" secondAttribute="trailing" constant="20" id="kWl-2d-f5G"/>
+                            <constraint firstItem="OTN-QF-Abe" firstAttribute="top" secondItem="n4H-cg-cDc" secondAttribute="bottom" constant="8" id="r1u-Zc-p3h"/>
+                            <constraint firstItem="n4H-cg-cDc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="xCI-JI-LrQ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="fKC-1B-p1j"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="387"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="297" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
