--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -28,13 +28,24 @@
                                         <rect key="frame" x="0.0" y="5" width="599" height="44"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </searchBar>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUa-FU-BMH">
+                                        <rect key="frame" x="523" y="8" width="62" height="45"/>
+                                        <state key="normal" title="Button" image="383"/>
+                                        <connections>
+                                            <action selector="musicButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i9C-kA-4zK"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.55539534395973156" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="TUa-FU-BMH" firstAttribute="leading" secondItem="n4H-cg-cDc" secondAttribute="leading" constant="523" id="6ym-9h-ZFQ"/>
                                     <constraint firstAttribute="trailing" secondItem="4qi-wJ-aNo" secondAttribute="trailing" id="CcU-r5-PnH"/>
+                                    <constraint firstAttribute="bottom" secondItem="TUa-FU-BMH" secondAttribute="bottom" id="Jqu-Cj-W1W"/>
                                     <constraint firstItem="4qi-wJ-aNo" firstAttribute="leading" secondItem="n4H-cg-cDc" secondAttribute="leading" id="LW6-XC-q5K"/>
+                                    <constraint firstAttribute="trailing" secondItem="TUa-FU-BMH" secondAttribute="trailing" constant="14" id="MWk-bc-bBQ"/>
                                     <constraint firstAttribute="height" constant="53" id="UuY-Ze-I56"/>
                                     <constraint firstItem="4qi-wJ-aNo" firstAttribute="top" secondItem="n4H-cg-cDc" secondAttribute="top" constant="5" id="c6i-jV-I9r"/>
+                                    <constraint firstItem="TUa-FU-BMH" firstAttribute="top" secondItem="n4H-cg-cDc" secondAttribute="top" constant="8" id="ewZ-BO-v2i"/>
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nEx-6x-PCM">
@@ -120,6 +131,7 @@
     </scenes>
     <resources>
         <image name="297" width="120" height="120"/>
+        <image name="383" width="96" height="96"/>
         <image name="bg" width="1920" height="1200"/>
     </resources>
 </document>
